Fixing bug of leaflet not showing if hidden and toggled

--- a/src/explore-education-statistics-frontend/src/prototypes/components/PrototypeMap.module.scss
+++ b/src/explore-education-statistics-frontend/src/prototypes/components/PrototypeMap.module.scss
@@ -1,5 +1,5 @@
 .map {
-  background-color: #fff;
+  background-color: #f8f8fc;
 
   height: 865px;
   width: 630px;
